Add model, and controller for adding customers. Start with same thing for editing them.

--- a/views/addCustomer.twig
+++ b/views/addCustomer.twig
@@ -23,8 +23,8 @@
         </tr>
         <tr>
             <td>
-                <label  for="postal-adress">Postal Adress:</label >
-                <input type="text" name="postal-adress" required placeholder="Postal adress...">
+                <label  for="postalAdress">Postal Adress:</label >
+                <input type="text" name="postalAdress" required placeholder="Postal adress...">
             </td>
         </tr>
         <tr>
