--- a/views/editCustomer.twig
+++ b/views/editCustomer.twig
@@ -5,32 +5,32 @@
         <tr>
             <td>
                 <label for="ssNr">Personal Nr:</label>
-                <input type="text" name="ssNr" placeholder="ssNr..." required readonly>
+                <input type="text" name="ssNr" placeholder="ssNr..." required readonly value="{{ssNr}}">
             </td>
         </tr>
         <tr>
             <td>
                 <label for="name">Name:</label>
-                <input type="text" name="name" placeholder="Name...">
+                <input type="text" name="name" placeholder="Name..." value="{{name}}">
             </td>
         </tr>
         <tr>
             <td>
                 <label for="address">Adress:</label>
-                <input type="text" name="adress" placeholder="Adress...">
+                <input type="text" name="adress" placeholder="Adress..." value="{{adress}}">
             </td>
             </td>
         </tr>
         <tr>
             <td>
                 <label  for="postal-adress">Postal Adress:</label >
-                <input type="text" name="postal-adress" required placeholder="Postal adress...">
+                <input type="text" name="postal-adress" required placeholder="Postal adress..." value="{{postalAdress}}">
             </td>
         </tr>
         <tr>
             <td>
                 <label  for="phonennumber">Phonenumber:</label >
-                <input type="text" name="phonenumber" required placeholder="Phonenumber...">
+                <input type="text" name="phonenumber" required placeholder="Phonenumber..." value="{{phonenumber}}">
             </td>
         </tr>
         <tr>
