Add possibility to edit customers. Start adding code for removing customers.

--- a/views/customers.twig
+++ b/views/customers.twig
@@ -14,7 +14,7 @@
             </form>
         </td>
         <td>
-            <form action="/removedCustomer" method="POST">
+            <form action="/removedCustomer/{{customer.ssNr}}/{{customer.name}}" method="POST">
                 <input type="submit" value="Remove">
             </form>
         </td>
