--- a/views/editCustomer.twig
+++ b/views/editCustomer.twig
@@ -23,8 +23,8 @@
         </tr>
         <tr>
             <td>
-                <label  for="postal-adress">Postal Adress:</label >
-                <input type="text" name="postal-adress" required placeholder="Postal adress..." value="{{postalAdress}}">
+                <label  for="postalAdress">Postal Adress:</label >
+                <input type="text" name="postalAdress" required placeholder="Postal adress..." value="{{postalAdress}}">
             </td>
         </tr>
         <tr>
