--- a/views/customerEdited.twig
+++ b/views/customerEdited.twig
@@ -1,5 +1,9 @@
 {% block customerEdited %}
 <p>Customer with social security number: {{ssNr}} has been updated.</p>
+<p>Name: {{name}}</p>
+<p>Adress: {{adress}}</p>
+<p>PostalAdress: {{postalAdress}}</p>
+<p>Phonenumber: {{phonenumber}}</p>
 <form action="/customers" method="POST">
     <input type="submit" value="OK">
 </form>
