--- a/views/cars.twig
+++ b/views/cars.twig
@@ -9,7 +9,7 @@
         <td><b>Price</b></td>
         <td><b>Checkout time</b></td>
         <td><b>Checkin time</b></td>
-        <td colspan"2"></td>
+        <td colspan="2"></td>
     </tr>
     {% for car in cars %}
     <tr>
