--- a/views/carAdded.twig
+++ b/views/carAdded.twig
@@ -1,5 +1,5 @@
 {% block carAdded %}
-<p>New car with registration number: {{regNr}} has been added.</p>
+<p>New {{car.make}} with registration number: {{car.regNr}} has been added.</p>
 <form action="/cars" method="POST">
     <input type="submit" value="OK">
 </form>
