--- a/views/cars.twig
+++ b/views/cars.twig
@@ -21,12 +21,12 @@
         <td>{{car.checkedOut}}</td>
         <td>{{car.checkedIn}}</td>
         <td>
-            <form action="/editCar" method="POST">
+            <form action="/editCar/{{car.regNr}}/{{car.make}}/{{car.color}}/{{car.year}}/{{car.price}}" method="POST">
                 <input type="submit" value="Edit">
             </form>
         </td>
         <td>
-            <form action="/removedCar" method="POST">
+            <form action="/removeCar/{{car.regNr}}/{{car.make}}" method="POST" onsubmit="return confirm('Are you sure you want to remove {{car.make}} with regNr: {{car.regNr}}?')">
                 <input type="submit" value="Remove">
             </form>
         </td>
