--- a/views/customers.twig
+++ b/views/customers.twig
@@ -22,7 +22,7 @@
             </form>
         </td>
         <td>
-            <form action="/removeCustomer/{{customer.ssNr}}/{{customer.name}}" method="POST" onsubmit="return confirm('Are you sure you want to remove customer {{customer.ame}}?')">
+            <form action="/removeCustomer/{{customer.ssNr}}/{{customer.name}}" method="POST" onsubmit="return confirm('Are you sure you want to remove customer {{customer.name}}?')">
                 <input type="submit" value="Remove">
             </form>
         </td>
