--- a/views/cars.twig
+++ b/views/cars.twig
@@ -33,16 +33,16 @@
     </tr>
     {% endfor %}
     <tr>
-        <td>
+        <td colspan="9">
             <form action="/addCar" method="POST">
-                <input type="submit" value="Add Car">
+                <input type="submit" value="Add Car" style="width: 100%;">
             </form>
         </td>
     </tr>
     <tr>
-        <td>
+        <td colspan="9">
             <form action="/" method="POST">
-                <input type="submit" value="Main Menu">
+                <input type="submit" value="Main Menu" style="width: 100%;">
             </form>
         </td>
     </tr>
