--- a/views/customers.twig
+++ b/views/customers.twig
@@ -28,17 +28,17 @@
         </td>
     </tr>
     {% endfor %}
-    <tr colspan="7">
-        <td>
+    <tr>
+        <td colspan="7">
             <form action="/addCustomer" method="POST">
-                <input type="submit" value="Add Customer">
+                <input type="submit" value="Add Customer" style="width: 100%;">
             </form>
         </td>
     </tr>
-    <tr colspan="7">
-        <td>
+    <tr>
+        <td colspan="7">
             <form action="/" method="POST">
-                <input type="submit" value="Main Menu">
+                <input type="submit" value="Main Menu" style="width: 100%;">
             </form>
         </td>
     </tr>
