--- a/views/editCar.twig
+++ b/views/editCar.twig
@@ -1,55 +1,69 @@
 {% block editCar %}
 <table border="1">
-    <th colspan="1">Edit Car</th>
+    <th colspan="2">Edit Car</th>
     <form action="/carEdited" method="POST">
         <tr>
             <td>
                 <label for="regNr">Registration Nr:</label>
+            </td>
+            <td>
                 <input type="text" name="regNr" placeholder="regNr..." required readonly value="{{regNr}}">
             </td>
         </tr>
         <tr>
             <td>
                 <label for="make">Make:</label>
-                <select name="make" required>
+            </td>
+            <td>
+                <select name="make" required style="width: 100%;">
                     <option>{{make}}</option>
-                {% for make in makes %}
-                    <option>{{make.getMake}}</option>
-                {% endfor %}
+                    {% for make in makes %}
+                     <option>{{make.getMake}}</option>
+                    {% endfor %}
                 </select>
             </td>
         </tr>
         <tr>
             <td>
                 <label for="color">Color:</label>
-                <select name="color" required>
+            </td>
+            <td>
+                <select name="color" required style="width: 100%;">
                     <option>{{color}}</option>
-                {% for color in colors %}
-                    <option>{{color.getColor}}</option>
-                {% endfor %}
+                    {% for color in colors %}
+                     <option>{{color.getColor}}</option>
+                    {% endfor %}
                 </select>
             </td>
         </tr>
         <tr>
             <td>
                 <label  for="year">Year:</label >
-                <input type="text" name="year" required placeholder="year..." value="{{year}}">
+            </td>
+            <td>
+                <input type="number" name="year" required placeholder="year..." value="{{year}}" min="1900" max="2020" style="width: 100%;">
             </td>
         </tr>
         <tr>
             <td>
                 <label  for="price">Price:</label >
+            </td>
+            <td>
                 <input type="text" name="price" required placeholder="price..." value="{{price}}">
             </td>
         </tr>
         <tr>
-            <td>
-                <input type="submit" value="Submit">
+            <td colspan="2">
+                <input type="submit" value="Submit" style="width: 100%;">
             </td>
         </tr>
     </form>
+        <tr>
+            <td colspan="2">
+                <form action="/cars" method="POST">
+                    <input type="submit" value="Cars" style="width: 100%;">
+                </form>
+            </td>
+        </tr
 </table>
-<form action="/cars" method="POST">
-    <input type="submit" value="Cars">
-</form>
 {% endblock %}
