--- a/views/editCustomer.twig
+++ b/views/editCustomer.twig
@@ -1,22 +1,28 @@
 {% block editCustomer %}
 <table border="1">
-    <th colspan="1">Edit Customer</th>
+    <th colspan="2">Edit Customer</th>
     <form action="/customerEdited" method="POST">
         <tr>
             <td>
                 <label for="ssNr">Personal Nr:</label>
+            </td>
+            <td>
                 <input type="text" name="ssNr" placeholder="ssNr..." required readonly value="{{ssNr}}">
             </td>
         </tr>
         <tr>
             <td>
                 <label for="name">Name:</label>
+            </td>
+            <td>
                 <input type="text" name="name" placeholder="Name..." value="{{name}}">
             </td>
         </tr>
         <tr>
             <td>
                 <label for="address">Adress:</label>
+            </td>
+            <td>
                 <input type="text" name="adress" placeholder="Adress..." value="{{adress}}">
             </td>
             </td>
@@ -24,23 +30,31 @@
         <tr>
             <td>
                 <label  for="postalAdress">Postal Adress:</label >
+            </td>
+            <td>
                 <input type="text" name="postalAdress" required placeholder="Postal adress..." value="{{postalAdress}}">
             </td>
         </tr>
         <tr>
             <td>
                 <label  for="phonennumber">Phonenumber:</label >
+            </td>
+            <td>
                 <input type="text" name="phonenumber" required placeholder="Phonenumber..." value="{{phonenumber}}">
             </td>
         </tr>
         <tr>
-            <td>
-                <input type="submit" value="Submit">
+            <td colspan="2">
+                <input type="submit" value="Submit" style="width: 100%;">
             </td>
         </tr>
     </form>
+        <tr>
+            <td colspan="2">
+                <form action="/customers" method="POST">
+                    <input type="submit" value="Customers" style="width: 100%;">
+                </form>
+            </td>
+        </tr>
 </table>
-<form action="/customers" method="POST">
-    <input type="submit" value="Customers">
-</form>
 {% endblock %}
