--- a/views/checkOut.twig
+++ b/views/checkOut.twig
@@ -1,7 +1,7 @@
 {% block checkOut %}
 <table border="1px">
     <th colspan="2"><h2>Check Out</h2></th>
-    <form action="/carCheckedOut">
+    <form action="/checkedOut">
         <tr>
             <td>
                 <label for="customer">Customer:</label>
