--- a/views/mainMenu.twig
+++ b/views/mainMenu.twig
@@ -17,7 +17,7 @@
                 <input type="submit" value="Check Out Car" style="width: 100%;">
             </td>
         </form>
-        <form action="/CheckIn" method="POST">
+        <form action="/checkIn" method="POST">
             <td>
                 <input type="submit" value="Check In Car" style="width: 100%;">
             </td>
