--- a/views/checkIn.twig
+++ b/views/checkIn.twig
@@ -1,6 +1,6 @@
 {% block checkIn %}
 <table border="1px">
-    <th colspan="2"><h2>Check Out</h2></th>
+    <th colspan="2"><h2>Check In</h2></th>
     <form action="/checkedIn">
         <tr>
             <td>
@@ -10,7 +10,7 @@
                 <select name="car" required style="width: 100%;">
                     <option>--Select a car--</option>
                     {% for car in cars %}
-                     <option>{{car.make}} {{car.regNr}}</option>
+                     <option>{{car.regNr}} {{car.make}}</option>
                     {% endfor %}
                 </select>
             </td>
