--- a/views/checkedIn.twig
+++ b/views/checkedIn.twig
@@ -1,6 +1,6 @@
 {% block checkedIn %}
-<p>{{car.make}} with registration number: {{car.regNr}} has been checked in by {{customer.name}}.</p>
-<form action="/checkIn" method="POST">
+<p>Car: {{car}} has been checked in.</p>
+<form action="/" method="POST">
     <input type="submit" value="OK">
 </form>
 {% endblock %}
