--- a/views/checkedOut.twig
+++ b/views/checkedOut.twig
@@ -1,5 +1,5 @@
 {% block checkedIn %}
-<p>{{car.make}} with registration number: {{car.regNr}} has been checked out by {{customer.name}}.</p>
+<p>Car: {{car}} has been checked out by {{customer}}.</p>
 <form action="/checkOut" method="POST">
     <input type="submit" value="OK">
 </form>
