--- a/views/checkedOut.twig
+++ b/views/checkedOut.twig
@@ -1,6 +1,6 @@
 {% block checkedIn %}
 <p>Car: {{car}} has been checked out by {{customer}}.</p>
-<form action="/checkOut" method="POST">
+<form action="/" method="POST">
     <input type="submit" value="OK">
 </form>
 {% endblock %}
