Fix so it checks both ssNr and regNr when updating in history for better accuracy.

--- a/views/checkedIn.twig
+++ b/views/checkedIn.twig
@@ -1,5 +1,5 @@
 {% block checkedIn %}
-<p>Car: {{car}} has been checked in.</p>
+<p>Car: {{car}} has been checked in by {{ssNr}}.</p>
 <form action="/" method="POST">
     <input type="submit" value="OK">
 </form>
