--- a/views/customerRemoved.twig
+++ b/views/customerRemoved.twig
@@ -1,5 +1,10 @@
 {% block customerRemoved %}
-    <p>Customer with social security number: {{ssNr}} and name: {{name}} has been removed.
+    {% if (numberOfCars == 0) %}
+        <p>Customer with social security number: {{ssNr}} and name: {{name}} has been removed.
+    {% else %}
+        <p>Customer with social security number: {{ssNr}} and name: {{name}} can´t be removed since they´re currently renting one or more cars.</p>
+        <p>Number of cars rented at the moment: {{numberOfCars}}.</p>
+    {% endif %}
     <form action="/customers" method="POST">
     <input type="submit" value="OK">
     </form>
