Add function so set total cost for renting period.

--- a/views/history.twig
+++ b/views/history.twig
@@ -16,7 +16,7 @@
         <td>{{histor.checkOut}}</td>
         <td>{{histor.checkIn}}</td>
         <td>{{histor.days}}</td>
-        <td>0</td>
+        <td>{{histor.cost}}</td>
     </tr>
     {% endfor %}
     <tr>
