Fnish js-function for checking control number on ssNr and length.

--- a/views/addCustomer.twig
+++ b/views/addCustomer.twig
@@ -7,7 +7,7 @@
                 <label for="ssNr">Personal Nr:</label>
             </td>
             <td>
-                <input type="text" name="ssNr" id="ssNr" placeholder="yymmddcccc" required>
+                <input type="text" name="ssNr" id="ssNr" placeholder="YYMMDDXXXX" required>
             </td>
         </tr>
         <tr>
@@ -66,30 +66,101 @@
         let warningMessage = document.getElementById("warning");
         //submitBtn = document.getElementById("submitBtn");
         //submitBtn.addEventListener("submit", return checkSubmit);
-
-        submitOk = true;
-        ssNr = 0;
-
+        let string = "HELLO";
+        let ssNr = 0;
+        let submitOk = true;
+        let numbers = 0;
+        let sum = 0;
+        let roundUp = 0;
+        let yymmdd = '';
 
         function getSsNr() {
             ssNr = this.value;
+            numbers = ssNr.split("");
         }
 
-        function validateSsNr() {
-            if (ssNr.length == 10) {
-                submitOk = true;
-            } else {
-                submitOk = false;
+        function formatSsNr() {
+            numbers[0] = 2 * parseInt(numbers[0], 10);
+            numbers[1] = 1 * parseInt(numbers[1], 10);
+            numbers[2] = 2 * parseInt(numbers[2], 10);
+            numbers[3] = 1 * parseInt(numbers[3], 10);
+            numbers[4] = 2 * parseInt(numbers[4], 10);
+            numbers[5] = 1 * parseInt(numbers[5], 10);
+            numbers[6] = 2 * parseInt(numbers[6], 10);
+            numbers[7] = 1 * parseInt(numbers[7], 10);
+            numbers[8] = 2 * parseInt(numbers[8], 10);
+            numbers[9] = parseInt(numbers[9], 10);
+
+            function separateNums() {
+                for (let i = 0; i < numbers.length; i++) {
+                    if (numbers[i].toString(10).split("").length > 1) {
+                        number = numbers[i].toString(10).split("");
+                        numbers[i] = parseInt(number[0], 10) + parseInt(number[1], 10);
+                    }
+                }
+            }
+
+            separateNums();
+
+            sum = numbers[0] + 
+                      numbers[1] + 
+                      numbers[2] + 
+                      numbers[3] + 
+                      numbers[4] + 
+                      numbers[5] + 
+                      numbers[6] + 
+                      numbers[7] + 
+                      numbers[8];
+
+            roundUp = Math.ceil((sum+1)/10)*10;
+        }
+
+        function separateNums() {
+            for (let i = 0; i < numbers.length; i++) {
+                if (numbers[i].toString(10).split("").length > 1) {
+                    number = numbers[i].toString(10).split("");
+                    numbers[i] = parseInt(number[0], 10) + parseInt(number[1], 10);
+                }
             }
         }
 
+        function validateDate() {
+            yymmdd = ssNr.substring(0, 6);
+
+            year = yymmdd.substring(0, 2);
+            month = yymmdd.substring(2, 4);
+            day = yymmdd.substring(4, 6);
+
+            if (year < 70 && year > 20) {
+                year += 2000;
+            } else {
+                year += 
+            }
+        }
+
+        function validateSsNr() {
+            formatSsNr();
+            if (!ssNr.match(/^([0-9]){2}([0-1])([0-9])([0-9]{2})([0-9]{4})$/)) {
+                submitOk = false;
+                warning.innerHTML = "Wrong format on personal number. Should be: YYMMDDXXXX.";
+            } else if (roundUp - sum != numbers[9]) {
+                submitOk = false;
+                warning.innerHTML = "Seems like this is not a valid personal number. Please try again.";
+            } else {
+                submitOk = true;
+            }
+        }
+
+      
+           
+
         function checkSubmit() {
             validateSsNr();
+            validateDate();
             if (submitOk == true) {
                 return true;
             } else {
                 warning.style.display = "block";
-                warning.innerHTML = "ERROR!!! Personal Number must be 10 characters long.";
                 return false;
             }
         }
