--- a/views/addCustomer.twig
+++ b/views/addCustomer.twig
@@ -68,7 +68,8 @@
         //submitBtn.addEventListener("submit", return checkSubmit);
         let string = "HELLO";
         let ssNr = 0;
-        let submitOk = true;
+        let submitOk = false;
+        let dateOk = true;
         let numbers = 0;
         let sum = 0;
         let roundUp = 0;
@@ -125,24 +126,40 @@
         }
 
         function validateDate() {
+            function y2k(number) { 
+                return (number < 1000) ? number + 1900 : number; 
+        }
             yymmdd = ssNr.substring(0, 6);
 
-            year = yymmdd.substring(0, 2);
-            month = yymmdd.substring(2, 4);
-            day = yymmdd.substring(4, 6);
+            year = yymmdd.substring(0, 2) - 0;
+            month = yymmdd.substring(2, 4) - 1;
+            day = parseInt(yymmdd.substring(4, 6), 10);
 
-            if (year < 70 && year > 20) {
+            if (year < 70) {
                 year += 2000;
             } else {
-                year += 
+                year += 1900;
             }
+
+            let testDate = new Date(year, month, day);
+
+            if (y2k(testDate.getYear() == year) && (testDate.getMonth() == month) && (testDate.getDate() == day)) {
+                dateOk = true;
+            } else {
+                dateOk = false;
+            } 
+            return dateOk;
         }
 
         function validateSsNr() {
+            validateDate();
             formatSsNr();
             if (!ssNr.match(/^([0-9]){2}([0-1])([0-9])([0-9]{2})([0-9]{4})$/)) {
                 submitOk = false;
                 warning.innerHTML = "Wrong format on personal number. Should be: YYMMDDXXXX.";
+            } else if (dateOk == false) {
+                submitOk = false;
+                warning.innerHTML = "Seems like this is not a valid date. Please try again."; 
             } else if (roundUp - sum != numbers[9]) {
                 submitOk = false;
                 warning.innerHTML = "Seems like this is not a valid personal number. Please try again.";
@@ -156,8 +173,7 @@
 
         function checkSubmit() {
             validateSsNr();
-            validateDate();
-            if (submitOk == true) {
+            if (submitOk == true && dateOk == true) {
                 return true;
             } else {
                 warning.style.display = "block";
